2016-10-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/tests/test_geodesy.py:

	Added simple tests for all remaining functions in geodesy.

	Removed automatic iterative conversion tests for all ellipsoid models. It
	seems to be fine to check the conversion for the default ellipsoid model
	WGS84.

	* typhon/geodesy/__init__.py:

	Include boundaries when checking the range of orbit inclination in
	ellipsoid2d().

	Fixed docstrings and syntax.

2016-10-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py: Implemented comparison.

	Implemented __eq__() and __neq__() to provide comparison functionality for
	GriddedField objects.

	* typhon/arts/tests/test_griddedfield.py:

	Test the equality and non-equality of reference GriddedField objects.

2016-10-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py: Fixed documentation.

2016-10-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py:

	ellipsoid_r_geodetic() and ellipsoid_r_geocentric() now take float and
	ndarray as lat argument.

	* typhon/geodesy/tests/test_geodesy.py:

	Added checks for ellipsoid_r_geodetic() and ellipsoid_r_geocentric().

2016-10-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/latex.py:

	Moved from typhon.utils as it does not really fit there.

	* typhon/__init__.py, typhon/utils/__init__.py: Fixed imports.

	* doc/latex.rst, doc/modules.rst, doc/utils.rst: Updated documentation.

2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geographical.py:

	General functions for manipulation geographical data.
	Currently containing a function to calculate area weighted mean.

	* typhon/__init__.py: Import new module.

	* doc/geographical.rst, doc/modules.rst:

	Included new module in the documentation.

2016-10-07  Richard larsson <ric.larsson@gmail.com>

	* typhon/geodesy/__init__.py (cartposlos2geocentric):
	
	Fixed logic bug and made explicit the differences from the atmlab version
